@@ -1,3 +1,8 @@
+2007-02-09  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/base/gf2mat.cpp: Replaced it_info() with it_info_debug() to
+	disable information messages when using an optimized library
+
 2007-02-08  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* itpp/base/mat.cpp, itpp/base/mat.h, itpp/base/vec.cpp,
